RESOLVED FIXED262067
[WebGPU] Buffer dynamic offsets are not implemented
https://bugs.webkit.org/show_bug.cgi?id=262067
Summary [WebGPU] Buffer dynamic offsets are not implemented
Mike Wyrzykowski
Reported 2023-09-25 13:43:09 PDT
[WebGPU] Buffer dynamic offsets are not implemented
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-25 13:43:28 PDT
Mike Wyrzykowski
Comment 2 2023-09-27 14:30:06 PDT
EWS
Comment 3 2023-09-29 20:48:55 PDT
Committed 268689@main (c82031ffbbcb): <https://commits.webkit.org/268689@main> Reviewed commits have been landed. Closing PR #18306 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.